--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -16,3 +16,11 @@ training:
   delta: 0.001
   device: "cuda"  # or "cpu"
   model_save_path: "state_dicts/cv34_embed512_final.pth"
+
+validation:
+  batch_size: 256
+  lr: 0.0001
+  num_epochs: 10000
+  patience: 100
+  delta: 0.001
+  device: "cuda"  # or "cpu"
